crates/xlate/tests/snapshots/golden_matrix__output_json_schema_strict__gpt-4o-mini__20260910__chat_to_responses__gpt6.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-6-astra",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Give the city Paris and a rough population."
        }
      ]
    }
  ],
  "text": {
    "format": {
      "type": "json_schema",
      "name": "city_pop",
      "schema": {
        "additionalProperties": false,
        "properties": {
          "city": {
            "type": "string"
          },
          "population": {
            "type": "integer"
          }
        },
        "required": [
          "city",
          "population"
        ],
        "type": "object"
      },
      "strict": true
    }
  },
  "max_output_tokens": 128,
  "stream": true
}
--- headers ---
content-type: application/json
upstream_streams: true
--- degraded ---
